--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,5 +1,8 @@
 # DOCKER_VERSION 1.3.1
 # VERSION 0.0.1
 
-FROM hedgeyedev/ruby:0.0.1
+FROM hedgeyedev/ubuntu_apt:0.0.1
 MAINTAINER Scott Smith <oldfartdeveloper@gmail.com>
+
+# Configure apache
+RUN apt-get -y install apache2
